force-app/main/default/objects/ClickEventActionResponse__c/ClickEventActionResponse__c.object-meta.xml
<CustomObject>
    <label>Click Event Action Response</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Click Event Action Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>