force-app/main/default/objects/ClickEventActionResponse__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>RuleAction__c</referenceTo>
    <relationshipLabel>Click Event Action Response</relationshipLabel>
    <relationshipName>Click_Event_Action_Response</relationshipName>
    <type>Lookup</type>
</CustomField>