force-app/main/default/objects/ClickEventActionResponse__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  RecordId__c,  Record_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>