force-app/main/default/objects/ClickEventActionResponse__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>record for which the action was invoked</description>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>