force-app/main/default/objects/ClickEventActionResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; ResponseId__c ,  Response_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response</label>
    <type>Text</type>
</CustomField>