force-app/main/default/objects/ClickEventActionResponse__c/fields/Response_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Name__c</fullName>
    <label>Response Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>