force-app/main/default/objects/ClickEventActionResponse__c/fields/ResponseId__c.field-meta.xml
<CustomField>
    <fullName>ResponseId__c</fullName>
    <label>Response Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>